--- a/index.html
+++ b/index.html
@@ -1,29 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8"/>
-        <meta http-equiv="X-UA-Compatible"content="IF=edge"/>
-        <meta name="viewport"content="width=device-width,initial-scale=1.0"/>
-        <title>Document</title>
-
-        <style>
-            details[open]summary{
-                background-color:aqua;
-            }
-        </style>
+        <meta charset="UTF-8">
+        <meta name="viewport"content="width=device-width,initia"
+        <title>Calculator</title>
+        <link rel="stylesheet"href="style.css">
     </head>
     <body>
-        <details>
-            <summary>summary here</summary>
-            Loren ipsum,dolor sit amet consectetur adipisicing elit,Inventore aut
-            suscipit quasi soluta expedita.Nemo vpluptate neque eius illo
-            
-        </details>
+        <h1>Calculator</h1>
+        <div class="card">
+            <div class="calc-head">
+                <input type="text"id="result"maxlength="10">
 
-        <figure>
+            </div>
+            <div class="calc-body">
+                <div>
+                    <input type="button"class="btn"value="C">
+                    <input type="button"class="btn"value="+/-">
+                    <input type="button"class="btn"value="%">
+                    <input type="button"class="btn btn-style"value="/">
+                </div>
 
-            <img src="./images/list.png"alt="list"/>
-            <figcaption>fig1: list.image</figcaption>
-        </figure>
+                <div>
+                    <input type="button"class="btn"value="7">
+                    <input type="button"class="btn"value="8">
+                    <input type="button"class="btn"value="9">
+                    <input type="button"class="btn btn"value="X">
+                </div>
+
+                <div>
+                    <input type="button"class="btn"value="4">
+                    <input type="button"class="btn"value="5">
+                    <input type="button"class="btn"value="6">
+                    <input type="button"class="btn btn-style"value="-">
+                </div>
+                <div>
+                    <input type="button"class="btn"value="1">
+                    <input type="button"class="btn"value="2">
+                    <input type="button"class="btn"value="3">
+                    <input type="button"class="btn btn-style"value="+">
+                </div>
+                <div>
+                    <input type="button"class="btn"value="0">
+                    <input type="button"class="btn"value=".">
+                    <input type="button"class="btn"value="DEL">
+                    <input type="button"class="btn" style="background-color:orange",value= "=">
+                </div>
+
+            </div>
+
+        </div>
+
     </body>
-    </html>
+</html>
